# lab2_oop

./: CMakeLists.txt  main.cpp
lib/: lib_mem.cpp  lib_mem.h  vectorina.h  vectorina_base.cpp  vectorina_base.h  vectorina_exception.cpp  vectorina_exception.h  vectorina_iter.h  vectorina_iterbase.cpp  vectorina_iterbase.h
